# overseer

./: README.md  backend_full_log.txt  code-reviewer.md  main.py  overseer.py  package-lock.json  package.json  pyproject.toml  release.sh  start_backend_dev.sh  start_dev.sh  start_frontend_dev.sh  test_ws.py
.github/workflows/: release.yml
backend/: file_system_api.py  git_utils.py  main.py  pty_manager.py  session_manager.py  store.py
backend/static/: index.html
backend/static/assets/: index-2B3ek0HD.css  index-BNi4pumP.js  index-BR5CQy8_.js  index-Bq_QF0wZ.js  index-ByGIKNxG.css  index-C-i1wmdW.js  index-CDMke9NC.css  index-CDW2WMRQ.js  index-CTSVBWgC.js  index-CVQ6FDwV.css  index-D1B_k5OJ.css  index-D5TkiT-S.css  index-DZfZvYMg.css  index-NtNQE7qz.js  index-pOBgk0mW.js  index-vUIqF4d_.js
backend/tests/: test_pty_manager.py  test_session_manager.py  test_store.py
docs/raw/: persona-based-view.md  pixel_agents.md
docs/superpowers/plans/: 2026-04-21-agent-manager-implementation.md  2026-04-22-fix-getbaseurl-imports.md  2026-04-22-overseer-new-session-flow.md  2026-04-22-pixel-agents-implementation.md  2026-04-22-process-persistence.md  2026-04-22-repo-modal-redesign.md  (+9 more)
frontend/: package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/src/: App.tsx  index.css
native/: README.md  package-lock.json  package.json  tsconfig.main.json  vite.config.ts
tests/backend/: test_api_personas.py  test_api_skills.py  test_file_system_api.py  test_persistence_buffer.py  test_pty_buffer.py  test_session_manager.py  test_store.py
(+73 files in other folders)
