[project]
name = "overseer"
version = "0.1.0"
description = "Unified UI for managing multiple Gemini CLI agent instances"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "ptyprocess>=0.7.0",
    "python-multipart>=0.0.9",
    "websockets>=12.0",
    "pydantic>=2.0.0",
]

[project.scripts]
overseer = "backend.main:run"

[tool.hatch.build.targets.wheel]
packages = ["backend"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["backend/tests"]
